# uv-hikari-bot

./: .gitignore  README.md  info.jsonc  info.toml  main.py  pyproject.toml  todo.md
bot_commands/: check.py  debug.py  marks.py  marks_bot_admin.py  marks_faculty.py  message_commands.py  post.py  sync.py  user_commands.py
bot_commands_debug/: ansi.py  bulk_delete.py
bot_debug_commands/: ansi.py  bulk_delete.py  marks_fetch.py
bot_environment/: config.py  state.py
bot_events/: on_join.py  on_name_change.py  on_start.py
member_verification/: check.py  response.py
member_verification/faculty/: check.py  failure.py  success.py
member_verification/student/: check.py  failure.py  success.py
member_verification/student_tutor/: check.py  success.py
setup_validation/: discord_sec.py  google_sheets.py  marks.py  toml_inputs.py
sync_with_state/: init.py  marks.py  roles.py  sheets.py
view_components/faculty_verification/: assign_sec_button.py
view_components/marks/: button_fetch.py  button_to_show.py  embed_and_nav.py
view_components/student_verification/: modal_and_button.py  yes_no_button.py
wrappers/: discord.py  pygs.py  utils.py
