[project]
name = "uv-hikari-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hikari-crescent>=1.3.0",
    "hikari-miru>=4.2.0",
    "hikari[speedups]>=2.4.1",
    "pandas>=2.3.2",
    "pygsheets>=2.0.6",
    "tomlkit>=0.13.3",
]
